google_code_in/spell_checker_interface/jsDw/style.css
* {
    font-family: 'Signika Negative', sans-serif;
}
h1 {
    text-align: center;
}
/*if the width and height constraints are changed, the js will have to be tweaked*/
#textAreaId {
    position: relative;
    left: 0;
    top: 20px;
    width: 342px;
    height: 175px;
    resize: none;
    border: solid lightgray 1px;
    font-size: 16px;
    padding: 4px;
    margin: 0 auto;
    display: block;
}
#textAreaId:hover {
    box-shadow: inset 0 0 4px gray;
}
#textAreaId:focus {
    outline: rgb(31,85,139) solid thin !important;
    box-shadow: none;
    border-color: rgb(31,85,139);
}

/*Spell Checker Interface*/

.spell_check_editor {
    display: block;
    z-index: -1;
    position: relative;
    left: 0;
    top: -165px;
    width: 342px;
    border: solid rgba(0,0,0,0) 1px;
    font-size: 16px;
    padding: 4px;
    background-color: rgba(0,0,0,0);
    margin: 0 auto;
    color: rgba(0,0,0,0);
}
.misspelled {
    border-bottom: solid red 1px;
}
#textAreaId {
    background-color: rgba(0,0,0,0);
}
.spell_recomendations {
    width: 100px;
    border: solid 1px lightgray;
    text-align: left;
    position: absolute;
    display: none;
    top: 0;
    left: 0;
    background-color: white;
}
.spell_recomendations_item, .spell_recomendations_ignore {
    margin: 1px;
    padding: 1px;
    cursor: pointer;
}
.spell_recomendations_item {
    width: 96px;
    overflow: hidden;
}
.spell_recomendations_ignore {
    text-align: center;
    background-color: rgb(180, 230, 255);
    color: rgb(44,179,44);
    width: 16px;
    margin-left: 0;
    position: absolute;
}
.spell_recomendations_item:hover {
    background-color: lightgray;
}
.spell_recomendations_ignore:hover {
    background-color: rgb(150, 205, 230);
}
.spell_recomendations_word {
    margin: 1px;
    padding: 1px;
    width: 78px;
    height: 20px;
    background-color: white;
    overflow: hidden;
    margin-right: 0;
    color: red;
}
.line {
    height: 1px;
    background-color: black;
}

